// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Header component Header component is created and rendered correctly when authStatus === AUTH 1`] = `
<header
  className="page-header movie-card__head"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
      href="/"
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="Batman"
        height="63"
        src="https://4.react.pages.academy/wtw/static/avatar/5.jpg"
        width="63"
      />
    </div>
  </div>
</header>
`;

exports[`Test Header component Header component is created and rendered correctly when authStatus === NO_AUTH 1`] = `
<header
  className="page-header movie-card__head"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
      href="/"
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <a
      className="user-block__link"
      href="/login"
    >
      Sign in
    </a>
  </div>
</header>
`;
